Switching to association

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -8,9 +8,11 @@
     "\n",
     "Un alto porcentaje de las compañías tiende a establecer categorías en donde enmarcar a sus empleados, clientes, etc. Estas categorías permiten diferenciar fácilmente a las personas situadas en ellas, facilitando su identificación, generalidades del grupo, características en común, etc. En ocasiones ubicar a una persona en una categoría puede ser difícil, ya que puede aplicar a más de una, esto obliga a que muchas veces este procedimiento se haga manual, siendo largo y tortuoso. \n",
     "\n",
+    "Para el caso particular de la compañía Colsubsidio. Establecer a sus empleados en categorías es una tarea escencial del área de recursos humanos. Ya que en base a estas categorías, sus empleados reciben beneficios específicos. Actualmente éste proceso lo realiza manualmente un experto del área, haciendo de esta tarea algo tedioso y difícil cuando el número de empleados a clasificar es elevado.\n",
+    "\n",
     "### Objetivo:\n",
     "\n",
-    "Automatizar la clasificación de empleados de Colsubsidio según sus características en las categorías previamente establecidas por la compañía.\n"
+    "Automatizar la clasificación de empleados de Colsubsidio según sus características, en las categorías previamente establecidas por la compañía.\n"
    ]
   },
   {
@@ -718,7 +720,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -997,7 +1001,7 @@
    "source": [
     "def search(s, i):\n",
     "    var = dicc[s]\n",
-    "    print list(var.keys())[list(var.values()).index(i)]\n"
+    "    print list(var.keys())[list(var.values()).index(i)]"
    ]
   },
   {
@@ -1008,7 +1012,9 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -1017,7 +1023,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1029,7 +1037,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1040,5 +1048,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
