Added DBScan and fixings in notebook

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -586,7 +584,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -626,7 +623,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -715,7 +711,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -740,9 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -779,9 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -846,7 +837,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Agrupación"
+    "## Agrupación\n",
+    "\n",
+    "Para la fase de agrupación, se utilizó tres algoritmos de clustering para evaluar el impacto que tienen ciertas variables sobre la clasificación final del dataset. Estos algoritmos son:\n",
+    "- K-means sobre las variables \"EDAD DEL EMPLEADO\", \"SALARIOS MINIMOS\", \"AFILIADO A PAC\". Las cuales, según la descripción de las categorias, son de gran importancia en la clasificación.\n",
+    "- K-modes sobre la totalidad del dataset procesado y discretizado. Este sólo trabaja con valores categoricos.\n",
+    "- K-prototypes es un algoritmo que puede agrupar datasets con valores nominales y categoricos, por esta razón, se trabajan las variables utilizadas en el K-means como nominales y las demás como categoricas."
    ]
   },
   {
@@ -864,16 +860,16 @@
    "source": [
     "## Clasificación\n",
     "\n",
-    "Para la parte de clasificación se implementaron los clasificadoress de Naive Bayes, Árboles de decisión, Redes neuronales, Support Vector Machine y K Nearest Neighbors. \n",
+    "Para la parte de clasificación se implementaron los clasificadores de Naive Bayes, Árboles de decisión, Redes neuronales, Support Vector Machine y K Nearest Neighbors. \n",
     "\n",
-    "Se monstrará una tabla comparativa entre las curva ROC y las matrices de confusión."
+    "Se muestra una tabla comparativa entre las curva ROC y las matrices de confusión."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -953,9 +949,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
